kubernetes/eks/baseline/addons/aws_load_balancer_controller/demos/01.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: demo-nlb-app
  ports:
    - port: 80
      targetPort: 80
