kubernetes/eks/baseline/addons/aws_load_balancer_controller/demos/02.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-alb-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-alb-app
            port:
              number: 80
